k8-yamls/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mf
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: mf
  template:
    metadata:
      labels:
        app: mf
    spec:
      containers:
      - name: mf
        image: mainframe-v0
        imagePullPolicy: Never
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mf-jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mf-jenkins
  template:
    metadata:
      labels:
        app: mf-jenkins
    spec:
      containers:
      - name: mf-jenkins
        image: mf-jenkins-v0
        imagePullPolicy: Never
        # environment:
        #   JENKINS_ARGS='--prefix=/jenkins'
        # args: ['--prefix=/jenkins'] #start with this one
        ports:
        - containerPort: 8080

        #JENKINS_ARGS="--prefix=/jenkins"
