k8-yamls/service.yml
apiVersion: v1
kind: Service
metadata:
  name: htmf-service
spec:
  #type: NodePort
  selector:
    app: htmf
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    #nodePort: 31000

    #minikube service htmf-service --url
    #kubectl get service NAME, to find podport
    #kubectl port-forward NAME localport:podport
